workloads/pod-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-app
  labels:
    name: nginx-app
spec:
  containers:
    - name: app
      image: nginx
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
