workloads/nginx-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-sample-traffic
  labels:
    name: nginx-sample-traffic

---
kind: Pod
apiVersion: v1
metadata:
  name: banana-app
  namespace: nginx-sample-traffic
  labels:
    app: banana
spec:
  containers:
    - name: banana-app
      image: hashicorp/http-echo
      args:
        - "-text=banana"
      resources:
        limits:
          cpu: 100m
          memory: 100Mi
        requests:
          cpu: 50m
          memory: 50Mi
---
kind: Service
apiVersion: v1
metadata:
  name: banana-service
  namespace: nginx-sample-traffic
spec:
  selector:
    app: banana
  ports:
    - port: 5678 # Default port for image

---
kind: Pod
apiVersion: v1
metadata:
  name: apple-app
  namespace: nginx-sample-traffic
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=apple"
      resources:
        limits:
          cpu: 100m
          memory: 100Mi
        requests:
          cpu: 50m
          memory: 50Mi
---
kind: Service
apiVersion: v1
metadata:
  name: apple-service
  namespace: nginx-sample-traffic
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-demo
  namespace: nginx-sample-traffic
spec:
  rules:
    - host: a8f1d10ecf2214b41a2ce8e7ebc693ed-101544195.ap-southeast-2.elb.amazonaws.com
      http:
        paths:
          - path: /apple
            pathType: Prefix
            backend:
              service:
                name: apple-service
                port:
                  number: 5678
          - path: /banana
            pathType: Prefix
            backend:
              service:
                name: banana-service
                port:
                  number: 5678

---
apiVersion: v1
kind: Pod
metadata:
  name: traffic-generator
  namespace: nginx-sample-traffic
spec:
  containers:
    - name: traffic-generator
      image: ellerbrock/alpine-bash-curl-ssl
      command: ["/bin/bash"]
      args:
        [
          "-c",
          "while :; do curl http://a8f1d10ecf2214b41a2ce8e7ebc693ed-101544195.ap-southeast-2.elb.amazonaws.com/apple > /dev/null 2>&1; curl http://a8f1d10ecf2214b41a2ce8e7ebc693ed-101544195.ap-southeast-2.elb.amazonaws.com/banana > /dev/null 2>&1; sleep 1; done",
        ]
      resources:
        limits:
          cpu: 100m
          memory: 100Mi
        requests:
          cpu: 50m
          memory: 50Mi
